# YZTA-hackathon

./: .env.example  .gitignore  PR_NOTES_order_stock_management.md  README.md  ai_service.py  database.py  main.py  pyproject.toml
backend/: requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/agents/: graph.py  nodes.py  state.py  supervisor.py  synthesizer.py
backend/app/agents/specialists/: base.py  (+6 more)
backend/app/api/: analytics.py  chat.py  dashboard.py  orders.py  shipments.py  stock.py  tickets.py  whatsapp.py
backend/app/models/: db_models.py
backend/app/schemas/: api_schemas.py  whatsapp_schemas.py
backend/app/seed/: seed_data.py
backend/app/services/: analytics_service.py  channel_dispatcher.py  gemini_service.py  rag_service.py  whatsapp_service.py
backend/app/tools/: action_tools.py  dashboard_tools.py  order_tools.py  rag_tools.py  shipment_tools.py  stock_tools.py
backend/tests/: test_action_layer.py  test_chat_endpoint.py  test_order_stock_management.py  test_orders_api.py  test_stock_api.py  test_supervisor_routing.py  test_whatsapp_webhook.py
docs/: policy.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/analytics/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/analytics/: AlertsCard.tsx  ProductQueryTable.tsx  StatsCards.tsx
frontend/components/chat/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/hooks/: useChat.ts
frontend/services/: api.ts
frontend/types/: index.ts
(+3 files in other folders)
