[project]
name = "yzta-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "python-dotenv",
  "google-genai",
  "langgraph",
  "chromadb",
  "python-multipart>=0.0.28",
]
